; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/socket/extr_socket.c_sock_setnonblock.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/socket/extr_socket.c_sock_setnonblock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_GETFL = common dso_local global i32 0, align 4
@O_NONBLOCK = common dso_local global i32 0, align 4
@F_SETFL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Failed to set O_NONBLOCK on socket %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_setnonblock(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @F_GETFL, align 4
  %7 = call i32 (i32, i32, ...) @fcntl(i32 %5, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @O_NONBLOCK, align 4
  %9 = load i32, i32* %3, align 4
  %10 = or i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @F_SETFL, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 (i32, i32, ...) @fcntl(i32 %11, i32 %12, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @error(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %17, %1
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @fcntl(i32, i32, ...) #1

declare dso_local i32 @error(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
